--- a/Penguin.Cms.Web.Security.csproj
+++ b/Penguin.Cms.Web.Security.csproj
@@ -1,32 +1,34 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <PackageLicenseFile>License.txt</PackageLicenseFile>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <PackageProjectUrl>http://www.penguinms.com/Nuget</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/penguincms/Penguin.Cms.Web.Security</PackageProjectUrl>
     <PackageIconUrl>http://www.penguinms.com/client/images/pg.png</PackageIconUrl>
     <Version>1.0.2</Version>
+<IncludeSymbols>true</IncludeSymbols>    
+<SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <Description>None Available</Description>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Penguin.Cms.Security" Version="1.0.8" />
+    <PackageReference Include="Penguin.Cms.Security" Version="1.0.9" />
   </ItemGroup>
 
  <ItemGroup>
-    <None Include="..\License.txt">
+    <None Include="License.txt">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
   </ItemGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <WarningsAsErrors>NU1605, CS1591</WarningsAsErrors>
-    <DocumentationFile>C:\SVN\Framework\Nuget\Penguin.Cms.Web.Security\Penguin.Cms.Web.Security.xml</DocumentationFile>
+    <DocumentationFile>Penguin.Cms.Web.Security.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DebugType>full</DebugType>
-    <DocumentationFile>C:\SVN\Framework\Nuget\Penguin.Cms.Web.Security\Penguin.Cms.Web.Security.xml</DocumentationFile>
+    <DocumentationFile>Penguin.Cms.Web.Security.xml</DocumentationFile>
   </PropertyGroup>
 </Project>
