--- a/Penguin.Cms.Web.Security.csproj
+++ b/Penguin.Cms.Web.Security.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="Penguin.Projects.Shared\Penguin.Projects.Shared.csproj" />
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <PackageProjectUrl>https://github.com/penguincms/Penguin.Cms.Web.Security</PackageProjectUrl>
-    <Version>2.0.1</Version>
+    <Version>3.0.8</Version>
     <Description>None Available</Description>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Penguin.Cms.Security" Version="2.0.1" />
+    <PackageReference Include="Penguin.Cms.Entities" Version="2.0.1" />
   </ItemGroup>
 </Project>
