--- a/Penguin.Cms.Web.Security.csproj
+++ b/Penguin.Cms.Web.Security.csproj
@@ -3,10 +3,16 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <PackageProjectUrl>https://github.com/penguincms/Penguin.Cms.Web.Security</PackageProjectUrl>
-    <Version>3.0.8</Version>
+    <Version>3.1.0</Version>
     <Description>None Available</Description>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Penguin.Cms.Entities" Version="2.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="3.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="Penguin.Cms.Entities" Version="3.0.3" />
+    <PackageReference Include="Penguin.Cms.Security" Version="3.4.0" />
+    <PackageReference Include="Penguin.Extensions.Collections" Version="2.0.3" />
+    <PackageReference Include="Penguin.Messaging.Persistence" Version="2.2.4" />
+    <PackageReference Include="Penguin.Web.Extensions" Version="1.0.0" />
   </ItemGroup>
 </Project>
