--- a/Penguin.Cms.Web.Security.Local.csproj
+++ b/Penguin.Cms.Web.Security.Local.csproj
@@ -8,7 +8,15 @@
     <AssemblyName>Penguin.Cms.Web.Security</AssemblyName>
     <RootNamespace>Penguin.Cms.Web.Security</RootNamespace>
     <DocumentationFile>Penguin.Cms.Web.Security.xml</DocumentationFile>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="3.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
